@@ -7,7 +7,8 @@
 ! or http://www.gnu.org/copyleft/gpl.txt . 
 !
 !*****************************************************************
-   SUBROUTINE domega( dimwann, nkpts, Mkb, csheet, sheet, rave, domg )
+   SUBROUTINE domega( dimwann, nkpts, Mkb, csheet, sheet, rave, &
+                      do_condmin, a_condmin, domg )
    !*****************************************************************
    !
    ! This routine compute the gradinet of the spread functional
@@ -24,32 +25,37 @@
    USE constants,          ONLY : ZERO, ONE, TWO, CZERO, CI
    USE timing_module,      ONLY : timing
    USE log_module,         ONLY : log_push, log_pop
-   USE kpoints_module,     ONLY : nkpts_g, iks, iproc_g, nb, vb, wb, nnpos, nnrev, nnlist
+   USE kpoints_module,     ONLY : nkpts_g, iks, nb, vb, wb, nnpos, nnrev, nnlist
    USE mp,                 ONLY : mp_sum
+   !
+   USE trial_center_data_module, ONLY : trial
    !
    IMPLICIT NONE 
 
    !  
    ! input variables 
    !  
-   INTEGER,      INTENT(in)  :: dimwann, nkpts
-   REAL(dbl),    INTENT(in)  :: rave(3,dimwann)
-   REAL(dbl),    INTENT(in)  :: sheet(dimwann,nb,nkpts_g)
-   COMPLEX(dbl), INTENT(in)  :: csheet(dimwann,nb,nkpts_g)
-   COMPLEX(dbl), INTENT(in)  :: Mkb(dimwann,dimwann,nb/2,nkpts)
-   COMPLEX(dbl), INTENT(out) :: domg(dimwann,dimwann,nkpts_g)
+   INTEGER,      INTENT(IN)  :: dimwann, nkpts
+   REAL(dbl),    INTENT(IN)  :: rave(3,dimwann)
+   REAL(dbl),    INTENT(IN)  :: sheet(dimwann,nb,nkpts_g)
+   COMPLEX(dbl), INTENT(IN)  :: csheet(dimwann,nb,nkpts_g)
+   COMPLEX(dbl), INTENT(IN)  :: Mkb(dimwann,dimwann,nb/2,nkpts)
+   LOGICAL,      INTENT(IN)  :: do_condmin
+   REAL(dbl),    INTENT(IN)  :: a_condmin
+   COMPLEX(dbl), INTENT(OUT) :: domg(dimwann*(dimwann+1)/2,nkpts_g)
 
    !
    ! local variables
    !
    CHARACTER(6)    :: subname='domega'
    !
-   INTEGER         :: ikk_g, ik, ik_g, ikb, ikb_g, ib, inn, ipos
-   INTEGER         :: m, n, ierr
+   INTEGER         :: ikk_g, ik, ik_g, ikb_g, ib, inn, ipos
+   INTEGER         :: m, n, l, ierr
    REAL(dbl)       :: fact
+   COMPLEX(dbl)    :: aux1, aux2
    REAL(dbl),    ALLOCATABLE :: qkb(:), sheet_aux(:) 
    COMPLEX(dbl), ALLOCATABLE :: R(:,:), T(:,:)
-   COMPLEX(dbl), ALLOCATABLE :: aux1(:,:), aux2(:,:), Mkb_aux(:,:), csheet_aux(:)
+   COMPLEX(dbl), ALLOCATABLE :: Mkb_aux(:,:), csheet_aux(:)
    !
    ! end of declarations 
    !
@@ -74,19 +80,13 @@
    !
    ALLOCATE( csheet_aux(dimwann), sheet_aux(dimwann),  STAT=ierr )
    IF( ierr /=0 ) CALL errore(subname, 'allocating sheets', ABS(ierr) )
-   !
-   ALLOCATE( aux1(dimwann,dimwann),  STAT=ierr )
-   IF( ierr /=0 ) CALL errore(subname, 'allocating aux1', ABS(ierr) )
-   !
-   ALLOCATE( aux2(dimwann,dimwann),  STAT=ierr )
-   IF( ierr /=0 ) CALL errore(subname, 'allocating aux2', ABS(ierr) )
 
 
    !
    ! domg is calculated
    !
    fact = TWO / REAL( nkpts_g, dbl )
-   domg(:,:,:) = CZERO
+   domg(:,:) = CZERO
    !
    !
    kpoints_loop: &
@@ -159,27 +159,27 @@
                ! note that a term -i has been factorized out to make dOmega/dW
                ! hermitean
                !
-               aux1(:,:) = CZERO
-               aux2(:,:) = CZERO
-               !
                DO n = 1, dimwann
-               DO m = 1, dimwann
+               DO m = 1, n
+                   !
+                   l =  (n-1) * n /2 + m
+
                    !
                    ! A[R^{k,b}] = -i ( R - R^dag )/2
                    ! where    R_mn = Mkb(m,n) * CONJG( Mkb(n,n) )
                    ! which is different from what reported on the paper PRB 56, 12852 (97)
                    !
-                   aux1(m,n) = aux1(m,n) - wb(ib) * CI * ( R(m,n) - CONJG( R(n,m)) )
+                   aux1 = - wb(ib) * CI * ( R(m,n) - CONJG( R(n,m)) )
      
                    !
                    ! S[T^{k,b}] = (T+Tdag)/2 
                    !
-                   aux2(m,n) = aux2(m,n) + wb(ib) * ( T(m,n) + CONJG(T(n,m)) )
+                   aux2 = + wb(ib) * ( T(m,n) + CONJG(T(n,m)) )
                    
                    !
                    ! dOmega/dW(k) = 4 * \Sum_b wb * (  A[R] - S[T] )
                    !
-                   domg(m,n,ikk_g) = domg(m,n,ikk_g) + fact * ( aux1(m,n) + aux2(m,n) )
+                   domg(l,ikk_g) = domg(l,ikk_g) + fact * ( aux1 + aux2 )
                    !
                ENDDO
                ENDDO
@@ -191,12 +191,23 @@
    ENDDO kpoints_loop
 
    !
+   ! if the case, compute the penalty functional terms
+   ! note that the action of this subroutine is to add the
+   ! penalty contributions to domg
+   !
+   IF ( do_condmin ) THEN
+       !
+       CALL domega_aux( dimwann, nkpts, Mkb, rave, trial, a_condmin, domg)
+       !
+   ENDIF
+
+   !
    ! recover over parallelism
    !
    CALL timing( 'mp_sum', OPR='start' )
    DO ik_g = 1, nkpts_g
        !
-       CALL mp_sum( domg(:,:,ik_g) )
+       CALL mp_sum( domg(:,ik_g) )
        !
    ENDDO
    CALL timing( 'mp_sum', OPR='stop' )
@@ -216,9 +227,6 @@
    !
    DEALLOCATE( csheet_aux, sheet_aux, STAT=ierr )
    IF( ierr /=0 ) CALL errore(subname, 'deallocating csheet_aux, sheet_aux', ABS(ierr) )
-   !
-   DEALLOCATE( aux1, aux2, STAT=ierr )
-   IF( ierr /=0 ) CALL errore(subname, 'deallocating aux1, aux2', ABS(ierr) )
 
 
    CALL timing(subname,OPR='stop')
